# cn-cta-Trend-Following-and-Risk-Control-Strategy

./: README.md
quant_project2/: README.md  pyproject.toml
quant_project2/examples/: run_akshare_demo.py  run_cta_demo.py  visualize_cta_demo.py
quant_project2/src/cn_cta/: __init__.py
quant_project2/src/cn_cta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quant_project2/src/cn_cta/analysis/: __init__.py  attribution.py  performance.py  stress.py
quant_project2/src/cn_cta/backtest/: __init__.py  engine.py
quant_project2/src/cn_cta/data/: __init__.py  adapters.py  akshare_adapter.py  sample.py  schema.py
quant_project2/src/cn_cta/risk/: __init__.py  controls.py  metrics.py
quant_project2/src/cn_cta/signals/: __init__.py  trend.py
quant_project2/src/cn_cta/walk_forward/: __init__.py  validation.py
quant_project2/tests/: test_akshare_adapter.py  test_backtest_analysis.py  test_data.py  test_signals_risk.py  test_walk_forward.py
